Bugfix. - top buttons not working on mobile

--- a/wled00/data/index.css
+++ b/wled00/data/index.css
@@ -1509,8 +1509,9 @@ TD .checkmark, TD .radiomark {
 		padding: 8px 0 4px 0;
 	}
 	#briwrap {
-		margin-top: 0px !important;
-		float: none;
+		margin: 0 auto !important;
+		float: unset;
+		display: inline-block;
 	}
 	.hd {
 		display: none !important;
